# libmerlin

./: CMakeLists.txt  Cargo.toml  Kbuild  build.sh
src/: lib.rs  merlin.c  merlin.h
