[package]
name = "portal-solutions-merlin-c"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2024"
description = "A single-file C library providing Merlin transcripts."

[dependencies]
rand_core = "0.3"

[dev-dependencies]
merlin = "1.0"
rand = "0.6"
rand_chacha = "0.1"

[build-dependencies]
cc = "1.0"

